--- a/views/billList.hbs
+++ b/views/billList.hbs
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  
   <main class="container">
     <h2 class="text-center mt-4">Bill List</h2>
     <table class="table table-striped mt-4">
@@ -33,7 +34,7 @@
           <td>{{this.store}}</td>
           <td>
             <a href="/bills/{{this._id}}" class="btn btn-info">View</a>
-            {{#ifCond user.role '==' 'admin'}}
+            {{#ifCond ../user.role '==' 'admin'}}
             <a href="/bills/delete/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this bill?');">Delete</a>
             {{/ifCond}}
           </td>
